Nuevo diseño en flex

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,5 +1,7 @@
-<footer class=" flex justify-center  mt-20 sm:justify-end sm:pb-10 sm:pr-10 ">
-    <a  class=" border w-7 h-7  mx-2 sm:w-11 sm:h-11 sm:border-2 rounded-full grid place-items-center hover:border-fuchsia-500 hover:text-fuchsia-500 text-white"href=""><i class="fa-brands fa-facebook-f   text-xl " ></i></a>
-    <a class=" border w-7 h-7  mx-2 sm:w-11 sm:h-11 sm:border-2 rounded-full grid place-items-center hover:border-fuchsia-500 hover:text-fuchsia-500 text-white" href=""> <i class="fa-brands fa-x-twitter text-xl"></i></a>
-    <a class=" border w-7 h-7  mx-2 sm:w-11 sm:h-11  sm:border-2 rounded-full grid place-items-center hover:border-fuchsia-500 hover:text-fuchsia-500 text-white" href=""> <i class="fa-brands fa-instagram text-xl"></i></a>
-</footer>
+
+    <!-- Footer -->
+    <footer class=" flex  justify-center sm:justify-end">
+      <a  class=" border w-7 h-7  mx-2 sm:w-11 sm:h-11 sm:border-2 rounded-full grid place-items-center hover:border-fuchsia-500 hover:text-fuchsia-500 text-white"href="#"><i class="fa-brands fa-facebook-f   text-xl " ></i></a>
+      <a class=" border w-7 h-7  mx-2 sm:w-11 sm:h-11 sm:border-2 rounded-full grid place-items-center hover:border-fuchsia-500 hover:text-fuchsia-500 text-white" href="#"> <i class="fa-brands fa-x-twitter text-xl"></i></a>
+      <a class=" border w-7 h-7  mx-2 sm:w-11 sm:h-11  sm:border-2 rounded-full grid place-items-center hover:border-fuchsia-500 hover:text-fuchsia-500 text-white" href="#"> <i class="fa-brands fa-instagram text-xl"></i></a>
+  </footer>
