--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,39 +6,47 @@ import Footer from "../components/Footer.astro";
 <Layout
   title="Frontend Mentor | Huddle landing page with single introductory section"
 >
-  <header class="mb-16 sm:mb-0">
-    <img class="w-36  sm:w-56" src="/logo.svg" alt="" />
-  </header>
-
-  <div class="  flex flex-col sm:flex-row sm:mt-16  ">
-    <div class=" basis-2/3 sm:max-w-4xl ">
-      <img class="w-full"
-        src="/illustration-mockups.svg"
-        alt="pantalla de telefono y celular animada"
-      />
-    </div>
-
-    <div class=" basis-1/3 mt-20 sm:m-16 ">
-      <div class=" text-3xl  text-center font-semibold text-white  sm:text-[2.5rem] sm:font-bold sm:mt-3 sm:text-balance">
-        Build The Community Your Fans Will Love
+  <div
+    class="bg-violet-600 flex flex-col min-h-screen bg-repeat-x p-6 bg-[url(/bg-mobile.svg)] sm:bg-[url(/bg-desktop.svg)]
+sm:bg-cover sm:bg-no-repeat sm:p-14"
+  >
+    <!-- Content -->
+    <main class="flex-grow pt-10 sm:flex sm:flex-row ">
+      <div class="flex  justify-center items-center  sm:w-2/3 w-full">
+        <img
+        
+          src="/illustration-mockups.svg"
+          alt="pantalla de telefono y escritorio animada"
+        />
       </div>
-      <div class=" flex flex-col sm:mt-3">
-        <p class="text-lg mt-4 text-center text-pretty text-white sm:text-xl sm:mt-6 sm:mb-14">
-          Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussion.
+
+      <div class="flex flex-col justify-center  items-center 
+      sm:w-1/3 w-full 
+      sm:items-start sm:pl-9 ">
+        <div class="text-center font-semibold text-white text-xl text-balance sm:text-left sm:text-4xl ">
+          Build The Community Your Fans Will Love
+        </div>
+
+        <p class="text-sm mt-4 text-center text-pretty text-white sm:text-left sm:text-xl sm:text-balance">
+          Huddle re-imagines the way we build communities. You have a voice, but
+          so does your audience. Create connections with your users as you
+          engage in genuine discussion.
         </p>
 
-        <a
-          class="py-3 text-center mx-14 mt-6 bg-white text-violet-600 hover:text-white hover:bg-fuchsia-500 rounded-full sm:py-4 sm:px-14  shadow-xl "
-          href="/"
-        >
-          Register</a
-        >
+        <div class="my-10">
+          <a
+            class="py-2 px-16 text-sm text-center bg-white text-violet-600
+            hover:text-white hover:bg-fuchsia-500 rounded-full shadow-xl
+            sm:py-3 sm:text-base 
+            "
+            href="/"
+          >
+            Register</a
+          >
+        </div>
       </div>
-    </div>
+    </main>
+
+<Footer></Footer>
   </div>
-
-
-  </div>
-
-  <Footer />
 </Layout>
