--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import Footer from "../components/Footer.astro";
+import Header from "../components/Header.astro";
 ---
 
 <Layout
@@ -10,6 +11,7 @@ import Footer from "../components/Footer.astro";
     class="bg-violet-600 flex flex-col min-h-screen bg-repeat-x p-6 bg-[url(/bg-mobile.svg)] sm:bg-[url(/bg-desktop.svg)]
 sm:bg-cover sm:bg-no-repeat sm:p-14"
   >
+  <Header></Header>
     <!-- Content -->
     <main class="flex-grow pt-10 sm:flex sm:flex-row ">
       <div class="flex  justify-center items-center  sm:w-2/3 w-full">
